Compacted the code, added working pagination with page list length and hideable columns

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <hr>
     <blockquote class="blockquote">
         <p class="mb-4" id="quote">Quote</p>
-        <footer class="blockquote-footer" id="author">Author</cite></footer>
+        <footer class="blockquote-footer" id="author">Author</footer>
     </blockquote>
     <script>
         var authors = new Array();
@@ -31,5 +31,5 @@
         author.innerHTML = authors[index]
         quote.innerHTML = quotes[index]
 
-</script>
+    </script>
 {% endblock %}
